fix: adjust padding and gap in menu

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,10 +1,10 @@
 .menu {
   width: 100%;
-  padding: 1rem;
+  padding: 0.75rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 2.5rem;
+  gap: 1rem;
   background-color: var(--primary-color);
   border-top-left-radius: var(--radius-lg);
   border-top-right-radius: var(--radius-lg);
